objects/Form_Rule_Junction__c.object
<CustomObject>
    <description>Junction object linking Form Rules with Forms supporting multiple forms required for a single state’s process and many states use the same form.</description>
    <fields>
        <fullName>FMigrationID__c</fullName>
        <formula>Form__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRMigrationID__c</fullName>
        <formula>Form_Rule__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FRMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Rule__c</fullName>
        <label>Form Rule</label>
        <referenceTo>Form_Rule__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Form_Rule_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Form Rules</relationshipLabel>
        <relationshipName>Form_Rule_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Form-Rule Junction</label>
    <nameField>
        <displayFormat>FFR-{000000}</displayFormat>
        <label>Form-Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form-Rule Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>